מיקום כפתור הstreak על גבי אייקון הפרופיל

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -68,7 +68,7 @@ else
                     {
                         @if (streakImgIcon != "")
                         {
-                            <button @onclick="goToStreakPage"><img src=@streakImgIcon /></button>
+                            <button @onclick="goToStreakPage" class="streakBtn"><img src=@streakImgIcon style="width:87%;" /></button>
 
                         }
                     }
