המשך עיצוב עמוד מבט על
סידור תגיות + הוספת שורת חיפוש

--- a/Client/Components/TransOverviewComponent.razor
+++ b/Client/Components/TransOverviewComponent.razor
@@ -17,7 +17,7 @@
                     <span style="color:#727272">@transaction.transDate</span>
                     @if (transaction.tagID != null)
                     {
-                        <span style="background-color:@transaction.tagColor">@transaction.tagTitle</span>
+                        <span class="tag" style="background-color:@transaction.tagColor">@transaction.tagTitle</span>
                     }
                 </div>
             </div>
