--- a/Client/Components/TransOverviewComponent.razor.css
+++ b/Client/Components/TransOverviewComponent.razor.css
@@ -28,7 +28,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     padding: 1vh 0;
     width: 95%;
 }
@@ -37,10 +37,54 @@
 .outerDateAndTag {
     display: flex;
     flex-direction: column;
+    row-gap: 0.5vh;
 }
 
 .transTitle {
     font-size: 1.1rem;
     font-weight: 700;
     margin: 0;
+}
+
+.tag {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    text-align: center;
+    border-radius: 0.25rem;
+    width: 5.5rem;
+    height: 2rem;
+    justify-items: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.outerTitleDateAndTag {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-between;
+    row-gap: 2vh;
+}
+
+.outerLowerPart {
+    display: flex;
+    background-color: rgba(251, 251, 251, 1);
+    flex-direction: column;
+    box-shadow: 0px 25px 25px 0px rgba(39, 53, 160, 0.09), 0px 6px 14px 0px rgba(39, 53, 160, 0.10);
+    row-gap: 2vh;
+}
+
+.outerDotsAndAmount {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    align-items: center;
+    column-gap: 1.2vh;
 }
