--- a/Client/Pages/TransactionsOverview.razor.css
+++ b/Client/Pages/TransactionsOverview.razor.css
@@ -103,6 +103,7 @@
     background-color: rgba(251, 251, 251, 1);
     flex-direction: column;
     box-shadow: 0px 25px 25px 0px rgba(39, 53, 160, 0.09), 0px 6px 14px 0px rgba(39, 53, 160, 0.10);
+    row-gap: 2vh;
 }
 
 .filterAndSortBtns {
@@ -122,7 +123,36 @@
     row-gap: 2vh;
 }
 
-.outerTitleDateAndTag{
-    display:flex;
-    flex-direction:column;
+.outerTitleDateAndTag {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-between;
+}
+
+.searchWrapper {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.searchInput {
+    width: 74.8vw;
+    height: 5.96806vh;
+    border-radius: 0.375rem;
+    background: #FAF9F9;
+    border: none;
+}
+
+.search__container {
+    border-radius: 0.375rem;
+    background-color: #D6D9F1;
+    width: 95%;
+    height: 8vh;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row-reverse;
+    align-items: center;
+    padding: 2.4vw;
+    column-gap: 1.2vh;
+    margin-top: 2vh;
 }
