--- a/Client/Pages/TransactionsOverview.razor.css
+++ b/Client/Pages/TransactionsOverview.razor.css
@@ -156,3 +156,44 @@
     column-gap: 1.2vh;
     margin-top: 2vh;
 }
+
+.streakStatus {
+    width: 13vw;
+    height: 6vh;
+}
+
+.streakBtn {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    outline: inherit;
+    position: absolute;
+    z-index: 1;
+    top: 33%;
+    left: 50%;
+    width: 111%;
+}
+
+.profilePic {
+    width: 3rem;
+    height: 3rem;
+    background-color: #F9F9F9;
+    border: 3.5px solid #6775F4;
+    color: inherit;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    text-align: center;
+    border-radius: 50%;
+    font-size: 1.8rem;
+    display: inline-block;
+}
+
+.profileAndStreak {
+    position: relative;
+    display: inline-block;
+}
